# sas7bdat-parser-rs

./: .gitignore  .gitmodules  .pre-commit-config.yaml  BEF_SCD_plan.md  BEF_SCHEMA.md  BENCHMARK.md  Cargo.toml  README.md  ROADMAP.md  TODO.md  justfile  pyproject.toml  rust-toolchain.toml  rustfmt.toml  test.R
R/: DESCRIPTION  SAVVY.md  haven_test.R  profile.Rprofvis
R-package/: .Rbuildignore  .Rhistory  DESCRIPTION  NAMESPACE
R-package/R/: readers.R
R-package/man/: sas_column_names.Rd  sas_row_count.Rd  write_sas.Rd
R-package/src/: Makevars.in  Makevars.win.in  init.c
R-package/src/rust/: Cargo.toml
R/R/: 000-wrappers.R
R/man/: read_sas.Rd  read_sas_df.Rd  sas_metadata_json.Rd
R/src/: SASreaderRUST-win.def
R/src/rust/: Cargo.toml  api.h
R/tests/: testthat.R
ahs-parquet/: homimp.parquet  omov.parquet  owner.parquet  ratiov.parquet  rmov.parquet
bef-scd/: Cargo.toml
bef-scd/src/: main.rs
benchmarks/: NuGet.Config  README.md  readstat_bench  readstat_bench.c  run_cpp.sh  run_csharp.sh  run_hyperfine.sh  run_modes.sh  run_readstat.sh  run_rust.sh
benchmarks/SasBenchmarks/: Program.cs  SasBenchmarks.csproj
benchmarks/cppbench/: CMakeLists.txt
benchmarks/cppbench/src/: main.cpp
benchmarks/csharp/: NuGet.Config
benchmarks/nuget-packages/: sas7bdat.2.0.2.nupkg
benchmarks/runners/: run_cpp.sh  run_csharp.sh  run_hyperfine.sh  run_modes.sh  run_readstat.sh  run_readstat_cli.sh  run_rust.sh  run_rust_bench.sh
benchmarks/suites/: bench_suite.py  build_all.py
bindings/sas7bdat-py/: README.md
bindings/sas7bdat-r/: README.md
crates/sas7bdat/: Cargo.toml  LICENSE  README.md
crates/sas7bdat-test-support/: Cargo.toml
crates/sas7bdat-test-support/src/: common.rs  external_compare.rs  external_tools.rs  fixtures_snapshot_util.rs  lib.rs  reference.rs
crates/sas7bdat/examples/: check_pointers.rs  inspect_header.rs  profile.rs  sas_to_parquet.rs  summarize.rs
crates/sas7bdat/src/: cell.rs  error.rs  iter_utils.rs  lib.rs  logger.rs
crates/sas7bdat/src/dataset/: labels.rs  metadata.rs  mod.rs  variables.rs
crates/sas7bdat/src/parser/: header.rs  mod.rs
crates/sas7bdat/src/parser/catalog/: mod.rs
crates/sas7bdat/src/parser/core/: byteorder.rs  encoding.rs  mod.rs
crates/sas7bdat/src/parser/metadata/: builder.rs  column_info.rs  mod.rs  row_info.rs  subheaders.rs  tests.rs  text_store.rs
crates/sas7bdat/src/parser/rows/: batch.rs  buffer.rs  columnar.rs  decode.rs  iterator.rs  mod.rs  page.rs  pointer.rs  runtime_column.rs  streaming.rs  tests.rs
crates/sas7bdat/src/reader/: labels.rs  missing.rs  mod.rs  projection.rs  row.rs  selection.rs  window.rs
crates/sas7bdat/src/sinks/: mod.rs
crates/sas7bdat/src/sinks/csv/: encode.rs  sink.rs  time_format.rs
crates/sas7bdat/src/sinks/parquet/: constants.rs  mod.rs  plan.rs  plan_stream.rs  sink.rs  stream.rs  utf8.rs
crates/sas7bdat/tests/: README.md  catalog.rs  fixtures_snapshot_cpp.rs  fixtures_snapshot_csharp.rs  fixtures_snapshot_readstat.rs  integration.rs  metadata.rs  missing_policies.rs  pandas_smoke.rs  read_options.rs
examples/: benchmark.rs  check_pointers.rs  inspect_header.rs  profile.rs  sas_to_parquet.rs  summarize.rs
fixtures/: README.md
log/: stderr.txt
parquet-fixtures/: 0x40controlbyte.parquet  54-class.parquet  54-cookie.parquet  accidents.parquet  airline.parquet  alcohol.parquet  all_rand_normal_with_deleted2.parquet  all_rand_uniform.parquet  almost_rand.parquet  andy.parquet  asparas.parquet  bangla.parquet  beer.parquet  bond.parquet  br.parquet  br2.parquet  broiler.parquet  brumm.parquet  byd.parquet  canada.parquet  capm2.parquet  cars.parquet  cattle.parquet  ces.parquet  cespro.parquet  ch10.parquet  chard.parquet  charset_aice.parquet  cloth.parquet  clothes.parquet  coal.parquet  cobb.parquet  cocaine.parquet  cola.parquet  cola2.parquet  commute.parquet  complications.parquet  computer.parquet  consumption.parquet  cps.parquet  (+192 more)
python/: README.md  pyproject.toml
python/tests/: test_external_parsers.py
read-stat-src/test/: test_buffer.c  test_buffer.h  test_dta_days.c  test_list.h
scripts/: bench_columnar.sh  generate_haven_dumps.R  generate_pandas_dumps.py
scripts/R/: 00_update_package.R  01_install_package.R  02_test_package.R  utils.R
scripts/analysis/: summarize.py
scripts/compare/: compare_summaries.py
scripts/snapshots/: generate_haven_dumps.R  generate_pandas_dumps.py
src/: api.rs  cell.rs  error.rs  lib.rs  logger.rs  value.rs
src/dataset/: dataset.rs  missing.rs  mod.rs
src/metadata/: mod.rs
src/parser/: byteorder.rs  catalog.rs  column.rs  columnar.rs  encoding.rs  float_utils.rs  header.rs  meta.rs  mod.rs  rows.rs
src/reader/: labels.rs  missing.rs  mod.rs  projection.rs  selection.rs  window.rs
src/sinks/: csv.rs  mod.rs  parquet.rs
tests/: catalog.rs  fixtures_snapshot.rs  fixtures_snapshot_haven.rs  fixtures_snapshot_pandas.rs  fixtures_snapshot_pyreadstat.rs  fixtures_snapshot_readstat.rs  integration.rs  metadata.rs  missing_policies.rs  pandas_golden.json  pandas_smoke.rs  pyreadstat_snapshot.py  read_options.rs  reference.rs
tests/common/: mod.rs
tests/fixtures_snapshot_util/: mod.rs
tests/reference/: README.md
tests/snapshots/: fixtures_snapshot__fixtures__raw_data__ahs2013__omov_sas7bdat.snap  fixtures_snapshot__fixtures__raw_data__ahs2013__ratiov_sas7bdat.snap  fixtures_snapshot__fixtures__raw_data__csharp__all_rand_normal_sas7bdat.snap  fixtures_snapshot__fixtures__raw_data__csharp__all_rand_uniform_sas7bdat.snap  fixtures_snapshot__fixtures__raw_data__csharp__almost_rand_sas7bdat.snap  fixtures_snapshot__fixtures__raw_data__csharp__charset_kiso_sas7bdat.snap  fixtures_snapshot__fixtures__raw_data__csharp__charset_kiso_sas7bdat.snap.new  fixtures_snapshot__fixtures__raw_data__csharp__charset_p857_sas7bdat.snap  fixtures_snapshot__fixtures__raw_data__csharp__chinese_column_fails_sas7bdat.snap.new  fixtures_snapshot__fixtures__raw_data__csharp__chinese_column_works_sas7bdat.snap.new  fixtures_snapshot__fixtures__raw_data__csharp__data_page_with_deleted_sas7bdat.snap  (+220 more)
(+561 files in other folders)
