[package]
name = "sas7bdat-parser-rs"
authors = ["Tobias Kragholm"]
version = "0.1.0"
publish = false
edition = "2024"
autobins = false

[lib]
name = "sas7bdat_parser_rs"
path = "src/lib.rs"
crate-type = ["staticlib", "rlib"]

[dependencies]
byteorder = "1"
thiserror = "2"
time = { version = "0.3", features = ["std", "formatting", "parsing"] }
encoding_rs = "0.8"

simdutf8 = "0.1.5"
smallvec = "1.15.1"
parquet = "57"
hotpath = { version = "0.5", optional = true }
ryu = "1"
itoa = "1"

[features]
default = []
hotpath = ["dep:hotpath", "hotpath/hotpath"]
hotpath-alloc-bytes-total = ["hotpath", "hotpath/hotpath-alloc-bytes-total"]
hotpath-alloc-count-total = ["hotpath", "hotpath/hotpath-alloc-count-total"]
hotpath-alloc-self = ["hotpath", "hotpath/hotpath-alloc-self"]
hotpath-off = ["hotpath/hotpath-off"]

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
datatest-stable = "0.3.3"
insta = { version = "1.39", features = ["json"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
tempfile = "3.10"
zip = { version = "6", default-features = false, features = ["deflate"] }

[[test]]
name = "fixtures_snapshot"
harness = false

[[test]]
name = "fixtures_snapshot_pandas"
harness = false

[[test]]
name = "fixtures_snapshot_pyreadstat"
harness = false

[[test]]
name = "fixtures_snapshot_haven"
harness = false
