[package]
name = "sas7bdat-parser-rs"
authors = ["Tobias Kragholm"]
version = "1.1.0"
publish = false
edition = "2024"
license = "MIT"

[lib]
name = "sas7bdat_parser_rs"
path = "src/lib.rs"
crate-type = ["staticlib", "rlib"]

[dependencies]
byteorder = "1"
thiserror = "2"
time = { version = "0.3", features = [
  "std",
  "formatting",
  "parsing",
  "macros",
] }
encoding_rs = "0.8"

simdutf8 = "0.1.5"
smallvec = "1.15.1"
parquet = "57"
hashbrown = "0.16"
ahash = "0.8"
rustc-hash = "2"
bytes = "1"
hotpath = { version = "0.7", optional = true }
ryu = "1"
itoa = "1"
csv = "1"
walkdir = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1.11.0"
clap = { version = "4.5.51", features = ["derive", "env"] }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
datatest-stable = "0.3.3"
insta = { version = "1.39", features = ["json"] }
reqwest = { version = "0.12", default-features = false, features = [
  "blocking",
  "rustls-tls",
] }
tempfile = "3.10"
zip = { version = "6", default-features = false, features = ["deflate"] }

[[test]]
name = "fixtures_snapshot"
harness = false

[[test]]
name = "fixtures_snapshot_pandas"
harness = false

[[test]]
name = "fixtures_snapshot_pyreadstat"
harness = false

[[test]]
name = "fixtures_snapshot_haven"
harness = false

[[bin]]
name = "sas7bd"
path = "src/bin/sas7bd.rs"

[lints.clippy]
pedantic = "warn"
nursery = "warn"

[profile.release]
codegen-units = 1
lto = "fat"
