[workspace]
members = [
  "benchmarks/rust/rustbench",
  "crates/sas7bdat",
  "crates/sas7bdat-test-support",
]
resolver = "2"

[workspace.dependencies]
ahash = "0.8"
byteorder = "1"
bytes = "1"
chrono = { version = "0.4", default-features = false, features = ["std"] }
clap = { version = "4.5.51", features = ["derive", "env"] }
csv = "1"
datatest-stable = "0.3.3"
encoding_rs = "0.8"
hashbrown = "0.16"
hotpath = "0.9"
itoa = "1"
num-traits = "0.2"
parquet = "57"
rayon = "1.11.0"
reqwest = { version = "0.13", default-features = false, features = ["blocking"] }
rustc-hash = "2"
ryu = "1"
sas7bdat = { path = "crates/sas7bdat" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simdutf8 = "0.1.5"
smallvec = "1.15.1"
tempfile = "3.10"
thiserror = "2"
time = { version = "0.3", features = ["std", "formatting", "parsing", "macros"] }
walkdir = "2"
zip = { version = "7", default-features = false, features = ["deflate"] }

[profile.release]
codegen-units = 1
lto = "fat"
