[package]
name = "s_a_sreader_r_u_s_t"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "lib"]

[dependencies]
# Use an absolute path so R's temp-install staging can still locate the core crate
sas7bdat = { path = "/Users/tobiaskragholm/dev/sas7bdat-parser-rs", package = "sas7bdat" }
savvy = "*"
serde_json = "1"

[features]
savvy-test = []

[profile.release]
panic = "abort"

[profile.dist-release]
inherits = "release"
codegen-units = 1
lto = "fat"
